--- a/index.html
+++ b/index.html
@@ -1,21 +1,48 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Социальные сети</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <section class="social-container">
-        <h2 class="social-title">Следите за нами
-в социальных сетях</h2>
-        <ul class="social-icons">
-            <li><a href="#" class="wa-icon"><img src="./images/wa-icon.png" alt="WhatsApp"></a></li>
-            <li><a href="#" class="tg-icon"><img src="./images/tg-icon.png" alt="Telegram"></a></li>
-            <li><a href="#" class="inst-icon"><img src="./images/inst-icon.png" alt="Instagram"></a></li>
-            <li><a href="#" class="vk-icon"><img src="./images/vk-icon.png" alt="VK"></a></li>
-        </ul>
+      <h2 class="social-title">Следите за нами в социальных сетях</h2>
+      <ul class="social-icons">
+        <li>
+          <a href="#" class="wa-icon"
+            ><img
+              src="./images/wa-icon.svg"
+              alt="WhatsApp"
+              class="social-icons__img-small"
+          /></a>
+        </li>
+        <li>
+          <a href="#" class="tg-icon"
+            ><img
+              src="./images/tg-icon.svg"
+              alt="Telegram"
+              class="social-icons__img-small"
+          /></a>
+        </li>
+        <li>
+          <a href="#" class="inst-icon"
+            ><img
+              src="./images/inst-icon.svg"
+              alt="Instagram"
+              class="social-icons__img-small"
+          /></a>
+        </li>
+        <li>
+          <a href="#" class="vk-icon"
+            ><img
+              src="./images/vk-icon.svg"
+              alt="VK"
+              class="social-icons__img-small"
+          /></a>
+        </li>
+      </ul>
     </section>
-</body>
+  </body>
 </html>
