--- a/index.html
+++ b/index.html
@@ -44,5 +44,118 @@
         </li>
       </ul>
     </section>
+    <div class="card-list">
+      <div class="card">
+        <div>
+          <h3 class="feedback-title">Google</h3>
+          <span class="mark">5</span>
+          <img src="./images/star.svg" alt="звезда" class="star" />
+        </div>
+        <a href="#" class="feedback-link"
+          ><img
+            src="./images/google-icon.svg"
+            alt="Google"
+            class="feedback-icon"
+        /></a>
+      </div>
+      <div class="card">
+        <div>
+          <h3 class="feedback-title">Яндекс</h3>
+          <span class="mark">4,2</span>
+          <img src="./images/star.svg" alt="звезда" class="star" />
+        </div>
+        <a href="#" class="feedback-link"
+          ><img src="./images/ya-icon.svg" alt="Яндекс" class="feedback-icon"
+        /></a>
+      </div>
+      <div class="card">
+        <div>
+          <h3 class="feedback-title">VL.RU</h3>
+          <span class="mark">4,2</span>
+          <img src="./images/star.svg" alt="звезда" class="star" />
+        </div>
+        <a href="#" class="feedback-link"
+          ><img src="./images/vlru-icon.svg" alt="VL.RU" class="feedback-icon"
+        /></a>
+      </div>
+      <div class="card">
+        <div>
+          <h3 class="feedback-title">2ГИС</h3>
+          <span class="mark">4</span>
+          <img src="./images/star.svg" alt="звезда" class="star" />
+        </div>
+        <a href="#" class="feedback-link"
+          ><img src="./images/2gis-icon.svg" alt="2ГИС" class="feedback-icon"
+        /></a>
+      </div>
+    </div>
+    <div class="testimonial-container">
+      <div class="section-header">
+        <h2 class="section-title">Отзывы</h2>
+        <div class="nav-buttons">
+          <button class="section-nav-button btn-left"></button>
+          <button class="section-nav-button btn-right"></button>
+        </div>
+      </div>
+      <div class="testimonial-slider">
+        <div class="testimonial">
+          <div class="testimonial-author">
+            <img src="./images/man-icon.svg" class="testimonial-author__icon"/>
+            <div>
+              <h3 class="testimonial-author__name">Дмитрий</h3>
+              <div class="stars">★★★★★</div>
+            </div>
+          </div>
+          <p class="testimonial-text">"Слушайте, вот это визуал. Уровень!"</p>
+          <button type="button" class="testimonial-button">Смотреть отзыв</button>
+        </div>
+        <div class="testimonial">
+          <div class="testimonial-author">
+            <img src="./images/man-icon.svg" class="testimonial-author__icon"/>
+            <div>
+              <h3 class="testimonial-author__name">Геннадий</h3>
+              <div class="stars">★★★★★</div>
+            </div>
+          </div>
+          <p class="testimonial-text">
+            "Спасибо Вам, Светлана и руководству компании за отзывчивость, за
+            профессионализм и просто за человеческое отношение! Не часто такое
+            встретишь в наше время!"
+          </p>
+          <button type="button" class="testimonial-button">Смотреть отзыв</button>
+        </div>
+        <div class="testimonial">
+          <div class="testimonial-author">
+            <img src="./images/woman-icon.svg" class="testimonial-author__icon"/>
+            <div>
+              <h3 class="testimonial-author__name">Светлана</h3>
+              <div class="stars">★★★★★</div>
+            </div>
+          </div>
+          <p class="testimonial-text">
+            "Спасибо! Вам и коллективу желаю здоровья, мира и процветания!
+            Отделка радует, причём в любую погоду по-разному красива. Сегодня
+            солнышко, она играет благородными цветами"
+          </p>
+          <button type="button" class="testimonial-button">Смотреть отзыв</button>
+        </div>
+      </div>
+    </div>
+  <section class="awards">
+    <div class="section-header">
+      <h2 class="section-title">Дипломы и награды</h2>
+      <div class="nav-buttons">
+        <button class="section-nav-button btn-left"></button>
+        <button class="section-nav-button btn-right"></button>
+      </div>
+    </div>
+    <div class="image-container">
+      <img src="./images/img.png" alt="Image 1">
+      <img src="./images/img.png" alt="Image 2">
+      <img src="./images/img.png" alt="Image 3">
+      <img src="./images/img.png" alt="Image 4">
+    </div>
+  </section>
+  <script src="script.js"></script>
   </body>
 </html>
